fix: navbar login button

--- a/public/index.html
+++ b/public/index.html
@@ -51,19 +51,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@200..800&display=swap" rel="stylesheet">
 
 
     <!-- Vendor CSS Files -->
-    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
     <link href="/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="/vendor/aos/aos.css" rel="stylesheet">
+    <!-- <link href="/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
+    <!-- <link href="/vendor/glightbox/css/glightbox.min.css" rel="stylesheet"> -->
+    <!-- <link href="/vendor/aos/aos.css" rel="stylesheet"> -->
 
     <link href="/css/main.css" rel="stylesheet" type="text/css" />
     <link href="/css/variables.css" rel="stylesheet" type="text/css" />
-    <link href="/css/responsive.css" rel="stylesheet" type="text/css" />
-    <link href="/css/ui.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="/css/responsive.css" rel="stylesheet" type="text/css" /> -->
+    <!-- <link href="/css/ui.css" rel="stylesheet" type="text/css" /> -->
 
     <title>Boldo</title>
   </head>
@@ -74,11 +75,11 @@
 
 
       <!-- Vendor JS Files -->
-  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="/vendor/aos/aos.js"></script>
-  <script src="/vendor/php-email-form/validate.js"></script>
+  <script src="/vendor/php-email-form/validate.js"></script> -->
 
   <!-- Template Main JS File -->
   <script src="/js/main.js"></script>
