--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 
 
     <!-- Vendor CSS Files -->
-    <!-- <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <!-- <link href="/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
     <!-- <link href="/vendor/glightbox/css/glightbox.min.css" rel="stylesheet"> -->
@@ -63,8 +63,8 @@
 
     <link href="/css/main.css" rel="stylesheet" type="text/css" />
     <link href="/css/variables.css" rel="stylesheet" type="text/css" />
-    <!-- <link href="/css/responsive.css" rel="stylesheet" type="text/css" /> -->
-    <!-- <link href="/css/ui.css" rel="stylesheet" type="text/css" /> -->
+    <link href="/css/responsive.css" rel="stylesheet" type="text/css" />
+    <link href="/css/ui.css" rel="stylesheet" type="text/css" />
 
     <title>Boldo</title>
   </head>
